// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> Snapshots should match snapshot with checked and disabled prop 1`] = `
<div>
  <label
    class="StyledRadio__Label-sc-1awvsvp-0 fDTlvj"
    disabled=""
  >
    <input
      checked=""
      class="StyledRadio__Field-sc-1awvsvp-1 bBSLqf"
      disabled=""
      type="radio"
      value=""
    />
    <p
      class="StyledParagraph-sc-1toaej-0 ZKQVH"
    />
  </label>
</div>
`;

exports[`<Radio /> Snapshots should match snapshot with checked prop 1`] = `
<div>
  <label
    class="StyledRadio__Label-sc-1awvsvp-0 fYWYHJ"
  >
    <input
      checked=""
      class="StyledRadio__Field-sc-1awvsvp-1 bBSLqf"
      type="radio"
      value=""
    />
    <p
      class="StyledParagraph-sc-1toaej-0 ZKQVH"
    />
  </label>
</div>
`;

exports[`<Radio /> Snapshots should match snapshot with disabled prop 1`] = `
<div>
  <label
    class="StyledRadio__Label-sc-1awvsvp-0 fDTlvj"
    disabled=""
  >
    <input
      class="StyledRadio__Field-sc-1awvsvp-1 bBSLqf"
      disabled=""
      type="radio"
      value=""
    />
    <p
      class="StyledParagraph-sc-1toaej-0 ZKQVH"
    />
  </label>
</div>
`;

exports[`<Radio /> Snapshots should match snapshot without props 1`] = `
<div>
  <label
    class="StyledRadio__Label-sc-1awvsvp-0 fYWYHJ"
  >
    <input
      class="StyledRadio__Field-sc-1awvsvp-1 bBSLqf"
      type="radio"
      value=""
    />
    <p
      class="StyledParagraph-sc-1toaej-0 ZKQVH"
    />
  </label>
</div>
`;
